# USB-IDE

./: .gitignore  AGENTS.md  Cargo.toml
src/: lib.rs  main.rs
src/app_core/: mod.rs
src/codex/: mod.rs
src/fs/: mod.rs
src/gui/: mod.rs
src/process/: mod.rs
src/ui/: mod.rs
src/workspace/: mod.rs
