[package]
name = "IDE-USB"
version = "0.1.0"
edition = "2024"

[lib]
name = "ide_usb"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
eframe = "0.27"
encoding_rs = "0.8"
ratatui = "0.30"
regex = "1.10"
serde_json = "1.0"
thiserror = "2.0"
tui-textarea = "0.4"

[dev-dependencies]
tempfile = "3.12"
